# rogomatic-llm

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml
src/cpr/: __init__.py  __main__.py  config.py  play.py
src/cpr/player/: __init__.py  base.py  human.py
src/rogomatic_llm/: __main__.py  config.py  play.py
src/rogomatic_llm/player/: base.py  llm.py
static/: demo.tape
tests/: __init__.py
tests/player/: __init__.py  test_human.py
