[project]
name = "cpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "iwhalen", email = "ianpatrickwhalen@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
cpr = "cpr:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
